<resources>
    <string name="app_name">VolunTeam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="expertise_prompt">Choose</string>

    <string-array name="expertise_string">
        <item>Select</item>
        <item>Computer Programmer</item>
        <item>Cook</item>
        <item>Doctor</item>
        <item>Driver</item>
        <item>Nurse</item>
        <item>Relief Bagger</item>
        <item>Students</item>
        <item>Teacher</item>
    </string-array>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_female">Female</string>
    <string name="hint_male">Male</string>
    <string name="txt_Signup">Register</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_edit">Save</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_password_length">Password must be atleast 8 characters long</string>
    <string name="title_activity_volunteer__home">Volunteer_Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
