<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thesis.volunteam2.EditAccount">

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="EDIT PROFILE"
                android:id="@+id/textview"
                android:layout_marginLeft="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/text_id"
                android:visibility="invisible"
                android:layout_above="@+id/register_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_name"
                    android:hint="@string/hint_name"
                    android:layout_above="@+id/textView6"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentLeft="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_gender_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/gender_validate"
                    android:textIsSelectable="false"
                    android:textSize="10sp"
                    android:layout_below="@+id/radioGroup"
                    android:layout_alignParentStart="true"
                    android:layout_alignStart = "@+id/radioGroup"
                    android:layout_alignParentLeft="true"
                    android:layout_alignLeft="@+id/radioGroup" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/edit_email"
                    android:hint="@string/hint_email"
                    android:layout_above="@+id/register_password"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentLeft="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/edit_password"
                    android:hint="@string/hint_password"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentRight="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_gendertv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView6"
                    android:hint="@string/hint_gender"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:layout_above="@+id/radioGroup"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="6dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="6dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:id="@+id/radioGroup"
                    android:layout_above="@+id/register_email"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <RadioButton
                                android:layout_width="85dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/rb_male"
                                android:checked="false"
                                android:hint="@string/hint_male"
                                android:layout_weight="1"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginEnd="31dp"
                                android:layout_marginRight="31dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <RadioButton
                                android:layout_width="145dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/rb_female"
                                android:checked="false"
                                android:hint="@string/hint_female"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1" />
                        </LinearLayout>
                    </LinearLayout>

                </RadioGroup>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:onClick="save_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_marginBottom="10dp"
                android:id="@+id/register_register"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:id="@+id/cancel_button"
                android:onClick="edit_cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/text_user"
                android:textIsSelectable="false"
                android:textSize="10sp"
                android:visibility="invisible"
                android:layout_below="@+id/cancel_button"
                android:layout_alignParentStart="true"
                android:layout_alignStart = "@+id/radioGroup"
                android:layout_alignParentLeft="true"
                android:layout_alignLeft="@+id/radioGroup" />


        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
